--- a/help.html
+++ b/help.html
@@ -52,7 +52,7 @@ $(function(){
 </div>
 <div id="export" class="question">
 <p><strong>Which format are supported to export a table ?</strong>
-<p>LaTeX, ConTeXt, Plain TeX, Markdown, JSON, BBCode, PreTeXt, Eplain, HTML and WML.
+<p>LaTeX, ConTeXt, Plain TeX, Markdown, Textile, JSON, BBCode, PreTeXt, Eplain, HTML and WML.
 </div>
 <div id="latex" class="question">
 <p><strong>Which features are supported when you import a LaTeX table?</strong>
