--- a/help.html
+++ b/help.html
@@ -1,4 +1,4 @@
-<!doctype>
+﻿<!doctype>
 <html>
 <head>
 <meta charset="UTF-8"> 
@@ -28,6 +28,11 @@ $(function(){
 	count.innerHTML = howmany;
 });
 </script>
+<style>
+.commands tbody tr td:first-child, .commands > tr td:first-child{
+font-family:monospace;
+}
+</style>
 </head>
 <body>
 <div class="container"><h2>Help</h2>
@@ -208,6 +213,31 @@ document.write("t")
 <li> ?`
 <li> --
 <li> ---
+<li> "---
+<li> "--*
+<li> "--~
+<li> "-
+<li> "=
+<li> "/
+<li> "'
+<li> "`
+<li> "<
+<li> ">
+<li> "a
+<li> "A
+<li> "e
+<li> "E
+<li> "i
+<li> "I
+<li> "o
+<li> "O
+<li> "s
+<li> "S
+<li> "u
+<li> "U
+<li> "z
+<li> "Z
+
 </ul>
 
 <ul class="supp">
@@ -224,10 +254,13 @@ document.write("t")
 <li>\=</li>
 <li>\.</li>
 <li>\\</li>
+<li>\aa
+<li>\AA
 <li>\ae</li>
 <li>\AE</li>
-<li>\bottomrule</li>
 <li>\b</li>
+<li>\boi
+<li>\bottomrule</li>
 <li>\c</li>
 <li>\cdashline
 <li>\cellcolor
@@ -239,12 +272,25 @@ document.write("t")
 <li>\columncolor
 <li>\cr</li>
 <li>\crcr
+<li>\cyrdash
 <li>\d</li>
+<li>\dh
+<li>\DH
+<li>\dq
 <li>\endfirsthead
 <li>\endhead
+<li>\euro
 <li>\fg</li>
 <li>\firsthdashline
 <li>\firsthline</li>
+<li>\flq
+<li>\flqq
+<li>\frq
+<li>\frqq
+<li>\glq
+<li>\glqq
+<li>\grq
+<li>\grqq
 <li>\H</li>
 <li>\hdashline
 <li>\hline</li>
@@ -264,6 +310,8 @@ document.write("t")
 <li>\multirowcell</li>
 <li>\multirowhead</li>
 <li>\newline</li>
+<li>\nj
+<li>\NJ
 <li>\o</li>
 <li>\O</li>
 <li>\oe</li>
@@ -273,6 +321,7 @@ document.write("t")
 <li>\par</li>
 <li>\part</li>
 <li>\pounds
+<li>\q
 <li>\r</li>
 <li>\raggedleft
 <li>\RaggedLeft
@@ -293,11 +342,15 @@ document.write("t")
 <li>\textbar</li>
 <li>\textbf</li>
 <li>\textcolor
+<li>\textemdash
 <li>\textexclamdown
 <li>\textit</li>
 <li>\textquestionmark
 <li>\textsl</li>
 <li>\textsterling
+<li>\textthreequartersemdash
+<li>\th
+<li>\TH
 <li>\toprule</li>
 <li>\u</li>
 <li>\uline</li>
@@ -306,6 +359,7 @@ document.write("t")
 <li>\v</li>
 <li>\vdashline
 <li>\verb</li>
+<li>\w
 <li>\Xcline
 <li>\Xhline
 </ul>
@@ -321,6 +375,12 @@ document.write("t")
 <li>\vrule</li>
 </ul>
 <h3><a id="Ignored_commands_117"></a>Ignored commands</h3>
+<ul>
+<li> "|
+<li> ""
+<li> "~
+<li> ",
+</ul>
 <ul>
 <li>\cite</li>
 <li>\hspace</li>
@@ -377,6 +437,1133 @@ document.write("t")
 <li> \RaggedRight
 <li> \vdashline
 <li> \vrule
+</ul>
+
+<table class="table table-striped table-condensed commands">
+	<thead>
+	<tr>
+		<th>
+			Command
+		</th>
+		<th>
+			Diacritic
+		</th>
+		<th>
+			Sample
+		</th>
+		<th>
+			Package
+		</th>
+	</tr>
+	</thead>
+	<tbody>
+	<tr>
+		<td>
+			\`
+		</td>
+		<td>
+			<font color="#222222">grave accent</font>
+		</td>
+		<td>
+			è
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\'
+		</td>
+		<td>
+			acute accent
+		</td>
+		<td>
+			é
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\^
+		</td>
+		<td>
+			circumflex
+		</td>
+		<td>
+			ô
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\"
+		</td>
+		<td>
+			<font color="#222222">umlaut, trema or dieresis</font>
+		</td>
+		<td>
+			ï
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\~
+		</td>
+		<td>
+			tilde
+		</td>
+		<td>
+			<font color="#222222">õ</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\=
+		</td>
+		<td>
+			macron accent
+		</td>
+		<td>
+			<font color="#222222">ō</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\.
+		</td>
+		<td>
+			dot over
+		</td>
+		<td>
+			<font color="#222222">ȯ</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\b
+		</td>
+		<td>
+			bar under
+		</td>
+		<td>
+			<u>o</u>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\c
+		</td>
+		<td>
+			cedilla
+		</td>
+		<td>
+			ç
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\d
+			<br>
+		</td>
+		<td>
+			dot under
+		</td>
+		<td>
+			<font color="#222222">ụ</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\H
+		</td>
+		<td>
+			<font color="#222222">long Hungarian umlaut (double acute)</font>
+		</td>
+		<td>
+			<font color="#222222">ő</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\k
+		</td>
+		<td>
+			ogonek
+		</td>
+		<td>
+			<font color="#222222">ą</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\q
+		</td>
+		<td>
+			czech hook
+		</td>
+		<td>
+			<font color="#222222">ť</font>
+		</td>
+		<td>
+			Babel (Czech)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\r
+		</td>
+		<td>
+			ring over
+		</td>
+		<td>
+			<font color="#222222">å</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\t
+		</td>
+		<td>
+			tie over the letter
+		</td>
+		<td>
+			<font color="#222222">o͡o</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\u
+		</td>
+		<td>
+			breve over
+		</td>
+		<td>
+			<font color="#222222">ŏ</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\v
+		</td>
+		<td>
+			caron over
+		</td>
+		<td>
+			<font color="#222222">ŏ</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\w
+		</td>
+		<td>
+			ring over
+		</td>
+		<td>
+			ů
+		</td>
+		<td>
+			Babel (Czech)
+		</td>
+	</tr>
+</table>
+<table class="table table-striped table-condensed commands">
+	<thead>
+	<tr>
+		<th>
+			Command
+		</th>
+		<th>
+			Character
+		</th>
+		<th>
+			Package
+		</th>
+	</tr>
+	</thead>
+	<tbody>
+	<tr>
+		<td>
+			~
+		</td>
+		<td>
+			Unbreakable space
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			``
+		</td>
+		<td>
+			<font color="#222222">“</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			''
+		</td>
+		<td>
+			”
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			!`
+		</td>
+		<td>
+			<font color="#545454">¡</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			?`
+		</td>
+		<td>
+			<font color="#545454">¿</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			--
+		</td>
+		<td>
+			<font color="#545454">–</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			---
+		</td>
+		<td>
+			<font color="#545454">—</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"---
+		</td>
+		<td>
+			<font color="#545454">—</font>
+		</td>
+		<td>
+			Babel (Russian)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"--*
+		</td>
+		<td>
+			<font color="#545454">—</font>
+		</td>
+		<td>
+			Babel (Russian)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"--~
+		</td>
+		<td>
+			<font color="#545454">—</font>
+		</td>
+		<td>
+			Babel (Russian)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"-
+		</td>
+		<td>
+			-
+		</td>
+		<td>
+			Babel
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"=
+		</td>
+		<td>
+			-
+		</td>
+		<td>
+			Babel
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"/
+		</td>
+		<td>
+			/
+		</td>
+		<td>
+			Babel (German)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"‘
+		</td>
+		<td>
+			<font color="#222222">„</font>
+		</td>
+		<td>
+			Babel
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"’
+		</td>
+		<td>
+			<font color="#222222">“</font>
+		</td>
+		<td>
+			Babel
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"&lt;
+		</td>
+		<td>
+			<font color="#222222">«</font>
+		</td>
+		<td>
+			Babel
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"&gt;
+		</td>
+		<td>
+			<font color="#222222">»</font>
+		</td>
+		<td>
+			Babel
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"a
+		</td>
+		<td>
+			ä
+		</td>
+		<td>
+			Babel (German)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"A
+		</td>
+		<td>
+			Ä
+		</td>
+		<td>
+			Babel (German)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"e
+		</td>
+		<td>
+			ë
+		</td>
+		<td>
+			Babel (German)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"E
+		</td>
+		<td>
+			Ë
+		</td>
+		<td>
+			Babel (German)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"i
+		</td>
+		<td>
+			ï
+		</td>
+		<td>
+			Babel (German)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"I
+		</td>
+		<td>
+			Ï
+		</td>
+		<td>
+			Babel (German)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"o
+		</td>
+		<td>
+			ö
+		</td>
+		<td>
+			Babel (German)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"O
+		</td>
+		<td>
+			Ö
+		</td>
+		<td>
+			Babel (German)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"s
+		</td>
+		<td>
+			ß
+		</td>
+		<td>
+			Babel (German)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"S
+		</td>
+		<td>
+			SS
+		</td>
+		<td>
+			Babel (German)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"u
+		</td>
+		<td>
+			ü
+		</td>
+		<td>
+			Babel (German)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"U
+		</td>
+		<td>
+			Ü
+		</td>
+		<td>
+			Babel (German)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"z
+		</td>
+		<td>
+			ß
+		</td>
+		<td>
+			Babel (German)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			"Z
+		</td>
+		<td>
+			SZ
+		</td>
+		<td>
+			Babel (German)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\&amp;
+		</td>
+		<td>
+			&amp;
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\%
+		</td>
+		<td>
+			%
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\{
+		</td>
+		<td>
+			{
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\}
+		</td>
+		<td>
+			}
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\_
+		</td>
+		<td>
+			_
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\$
+		</td>
+		<td>
+			$
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\&#x2423;
+		</td>
+		<td>
+			[SPACE]
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\aa
+		</td>
+		<td>
+			<font color="#222222">å</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\AA
+		</td>
+		<td>
+			<font color="#222222">Å</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\ae
+		</td>
+		<td>
+			<font color="#222222">æ</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\AE
+		</td>
+		<td>
+			<font color="#222222">Æ</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\boi
+		</td>
+		<td>
+			\
+		</td>
+		<td>
+			Babel (French)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\cyrdash
+		</td>
+		<td>
+			<font color="#545454">—</font>
+		</td>
+		<td>
+			Babel (Russian)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\dh
+		</td>
+		<td>
+			ð
+		</td>
+		<td>
+			Babel (Icelandic)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\DH
+		</td>
+		<td>
+			Ð
+		</td>
+		<td>
+			Babel (Icelandic)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\dq
+		</td>
+		<td>
+			"
+		</td>
+		<td>
+			Babel
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\euro
+		</td>
+		<td>
+			<font color="#222222">€</font>
+		</td>
+		<td>
+			eurosym
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\fg
+		</td>
+		<td>
+			<font color="#222222">»</font>
+		</td>
+		<td>
+			Babel
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\flq
+		</td>
+		<td>
+			<font color="#222222">‹</font>
+		</td>
+		<td>
+			Babel
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\flqq
+		</td>
+		<td>
+			<font color="#222222">«</font>
+		</td>
+		<td>
+			Babel
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\frq
+		</td>
+		<td>
+			<font color="#222222">›</font>
+		</td>
+		<td>
+			Babel
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\frqq
+		</td>
+		<td>
+			<font color="#222222">»</font>
+		</td>
+		<td>
+			Babel
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\glqq
+		</td>
+		<td>
+			<font color="#222222">„</font>
+		</td>
+		<td>
+			Babel
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\grqq
+		</td>
+		<td>
+			<font color="#222222">“</font>
+		</td>
+		<td>
+			Babel
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\i
+		</td>
+		<td>
+			i
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\j
+		</td>
+		<td>
+			j
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\l
+		</td>
+		<td>
+			<font color="#222222">ł</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\L
+		</td>
+		<td>
+			Ł
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\LaTeX
+		</td>
+		<td>
+			LaTeX
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\nj
+		</td>
+		<td>
+			ŋ
+		</td>
+		<td>
+			Babel
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\NJ
+		</td>
+		<td>
+			Ŋ
+		</td>
+		<td>
+			Babel
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\o
+		</td>
+		<td>
+			<font color="#222222">ø</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\O
+		</td>
+		<td>
+			Ø
+			<br>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\oe
+		</td>
+		<td>
+			œ
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\OE
+		</td>
+		<td>
+			Œ<wbr>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\og
+		</td>
+		<td>
+			<font color="#222222">«</font>
+		</td>
+		<td>
+			Babel
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\P
+		</td>
+		<td>
+			<font color="#545454">¶</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\pounds
+		</td>
+		<td>
+			£
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\ss
+		</td>
+		<td>
+			ß
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\TeX
+		</td>
+		<td>
+			TeX
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\textasciicircum
+		</td>
+		<td>
+			^
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\textasciitilde
+		</td>
+		<td>
+			~
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\textbackslash
+		</td>
+		<td>
+			\
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\textemdash
+		</td>
+		<td>
+			<font color="#545454">—</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\textexclamdown
+		</td>
+		<td>
+			<font color="#545454">¡</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\textquestiondown
+		</td>
+		<td>
+			<font color="#545454">¿</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\textsterling
+		</td>
+		<td>
+			£
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\<font color="#333333">textthreequartersemdash</font>
+		</td>
+		<td>
+			<font color="#333333">‒</font>
+		</td>
+		<td>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\th
+		</td>
+		<td>
+			<font color="#222222">þ</font>
+		</td>
+		<td>
+			Babel (Icelandic)
+		</td>
+	</tr>
+	<tr>
+		<td>
+			\TH
+		</td>
+		<td>
+			Þ
+		</td>
+		<td>
+			Babel (Icelandic)
+		</td>
+	</tr>
+</table>
 </div>
 </body>
 </html>
