--- a/help.html
+++ b/help.html
@@ -64,6 +64,8 @@ font-family:monospace;
 <p>The following environments are supported :
 <ul>
 <li>table
+<li>table*
+<li>ctable
 <li>sidewaystable
 </ul>
 <ul>
@@ -88,10 +90,13 @@ font-family:monospace;
 <li>xtabular</li>
 <li>mpxtabular</li>
 <li>longtable</li>
+<li>tabularht
+<li>tabularht*
+<li>tabularhtx
+<li>tabularkv
 </ul>
 <p>The following environments will be supported soon (in order of priority)
 <ul>
-<li>tabularht
 <li>supertabular
 <li>xtabular*
 <li>mpxtabular*
