--- a/help.html
+++ b/help.html
@@ -305,6 +305,7 @@ document.write("t")
 <li>\k</li>
 <li>\l</li>
 <li>\L</li>
+<li>\label</li>
 <li>\LaTeX</li>
 <li>\lasthdashline
 <li>\lasthline</li>
