--- a/index.html
+++ b/index.html
@@ -467,6 +467,34 @@ Color of border :
       </div>
 </div>
 
+
+<div class="modal fade" id="campaignModal" tabindex="-1" role="dialog" aria-labelledby="campaignLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="campaignLabel">Help us !</h4>
+      </div>
+      <div class="modal-body">
+<div class="text-center">
+
+<p>Since the launch of this site, this utility has generated millions of tables, making life easier for students, scientists, academics and LaTeX enthusiasts. My goal was to create an editor that would be easy to use, that would generate its own code and that would handle all situations to produce clean and neat tables.<p>
+
+I am the sole developer of this project and I ask for your help. I would like to include many more features on this website, so that creating tables can become an even easier task.
+
+<p>To learn more about this annual campaign and make a donation, click on the button below. You can make a donation by credit card, Paypal, Apple Pay and more.
+
+</p>
+			<a class="dbox-donation-button" href="https://donorbox.org/latex-tables-2018" style="background:#2d81c5 url(https://d1iczxrky3cnb2.cloudfront.net/red_logo.png) no-repeat 37px center; color: #fff;text-decoration: none;font-family: Verdana,sans-serif;display: inline-block;font-size: 16px;padding: 15px 38px 15px 75px; -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px; box-shadow: 0 1px 0 0 #1f5a89; text-shadow: 0 1px rgba(0, 0, 0, 0.3);" target="_blank" onclick="table.campaignClicked();$('#campaignModal').modal('hide');">Donate</a>
+</div>
+
+
+	</div>
+	</div>
+      </div>
+</div>
+
+
 <div class="modal fade" id="colorpicker" style="z-index:1051;" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
