--- a/supportus.html
+++ b/supportus.html
@@ -44,7 +44,7 @@
 <h4>Official sponsors</h4>
 
 <div class="row">
-<div class="col-md-4 text-center" style="padding:10px;"><div><img src="sponsors/sheetjs.png" width=80></div>
+<div class="col-md-4 text-center" style="padding:10px;"><div><a href="http://sheetjs.com"><img src="sponsors/sheetjs.png" width=80></a></div>
 <div class="text-center"><strong><a href="http://sheetjs.com">SheetJS</a></strong></div>
 <div class="text-center">SheetJS is the tool that allows the editor to load spreadsheets. It is a sponsor of this project.</div></div>
 </div>
