--- a/help.html
+++ b/help.html
@@ -290,6 +290,7 @@ document.write("t")
 <li>\firsthline</li>
 <li>\flq
 <li>\flqq
+<li>\footnote
 <li>\frq
 <li>\frqq
 <li>\glq
@@ -339,6 +340,7 @@ document.write("t")
 <li>\section</li>
 <li>\ss</li>
 <li>\subsection</li>
+<li>\tablefootnote
 <li>\tabucline</li>
 <li>\tabularnewline</li>
 <li>\TeX</li>
