--- a/index.html
+++ b/index.html
@@ -231,8 +231,10 @@ Output <span class="caret"></span>
 				<input id="caption" class="form-control" placeholder="Caption">
 			</div>
 		</div>
-		<table id="table">
-		</table>
+		<div id="table-div-container">
+			<table id="table">
+			</table>
+		</div>
 <div>
 <div class="alert alert-info" role="alert" style="display:none;" id="border-editor-info">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
