--- a/index.html
+++ b/index.html
@@ -254,6 +254,8 @@ Output <span class="caret"></span>
 </div>
 </div>
 </div>
+<hr>
+<center><a rel="help" href="help.html">Help</a> | <a href="changelog.txt">Changelog</a> | <a href="https://github.com/JDMCreator/LaTeXTableEditor/issues">Github</a> | Our other project : <a href="https://www.timemaths.com">TimeMaths : An Online Time Calculator</a></center>
 		</div>
   <div id="right">
 <div id="right-controler" onclick="$(document.body).toggleClass('closedPanel')">
@@ -603,7 +605,7 @@ I am the sole developer of this project and I ask for your help. I would like to
 		<h4>Draw border</h4>
 		<p>On the right panel, click on <kbd>Border editor</kbd> to expand the section. Then, click on <span class="glyphicon glyphicon-pencil"></span>.
 		<h4>More help</h4>
-		If you have more questions, check the <a href="help.html" target="_blank">FAQ</a>.
+		If you have more questions, check the <a rel="help" href="help.html" target="_blank">FAQ</a>.
       </div>
     </div>
   </div>
