--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
 
 
 <p class="text-right hide-on-full" style="margin:0"><a href="https://github.com/JDMCreator/LaTeXTableEditor/issues" target="_blank">Comments/Requests/Issues</a> | <a href="#" data-target="#help-modal" data-toggle="modal">Help</a></p>
+
+
+<!-- Header -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5146982563696073"
+     data-ad-slot="9054299450"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
 <div style="height:50px;margin-bottom:10px;" class="hide-on-full"><img src="logo.png" alt="Logo." height="50"><span class="latex-logo">L<span class="latex-a">a</span>T<span class="latex-e">e</span>X Complex Table Editor <small style="font-size:14px;">With <a href="https://github.com/JDMCreator/Table.js" target="_blank">Table.js</a></small></span></div>
 		<nav class="nav-latex">
 <div class="clearfix">
@@ -241,7 +255,19 @@ Output <span class="caret"></span>
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 <span class="glyphicon glyphicon-info-sign"></span> You are now using the border editor. You can drag your cursor to draw multiple borders at once or click on any border to activate or deactivate it. You can change the border style on the right panel.</div>
 </div>
-		<hr><center><button onclick="table.generate()" class="btn btn-default">Generate</button></center><br>
+		<hr>
+<!-- Before-Generate
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5146982563696073"
+     data-ad-slot="1874006957"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>-->
+
+<center><button onclick="table.generate()" class="btn btn-default">Generate</button></center><br>
 <div class="row">
 
 <div class="col-md-9"><textarea id="c" class="form-control">
@@ -396,6 +422,20 @@ Color of border :
      </div>
     </div>
   </div>
+
+
+<!-- Right-Panel -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5146982563696073"
+     data-ad-slot="9752496976"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
 </div>
 </div>
 
