--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <p class="text-right hide-on-full" style="margin:0"><a href="https://github.com/JDMCreator/LaTeXTableEditor/issues" target="_blank">Comments/Requests/Issues</a> | <a href="#" data-target="#help-modal" data-toggle="modal">Help</a></p>
 
 
-<!-- Header -->
+<!-- Header
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-5146982563696073"
@@ -54,7 +54,7 @@
      data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script>-->
 
 
 <div style="height:50px;margin-bottom:10px;" class="hide-on-full"><img src="logo.png" alt="Logo." height="50"><span class="latex-logo">L<span class="latex-a">a</span>T<span class="latex-e">e</span>X Complex Table Editor <small style="font-size:14px;">With <a href="https://github.com/JDMCreator/Table.js" target="_blank">Table.js</a></small></span></div>
@@ -256,7 +256,9 @@ Output <span class="caret"></span>
 <span class="glyphicon glyphicon-info-sign"></span> You are now using the border editor. You can drag your cursor to draw multiple borders at once or click on any border to activate or deactivate it. You can change the border style on the right panel.</div>
 </div>
 		<hr>
-<!-- Before-Generate
+
+<center><button onclick="table.generate()" class="btn btn-default">Generate</button></center>
+<!-- Before-Generate -->
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-5146982563696073"
@@ -265,9 +267,9 @@ Output <span class="caret"></span>
      data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>-->
+</script><----->
 
-<center><button onclick="table.generate()" class="btn btn-default">Generate</button></center><br>
+<br>
 <div class="row">
 
 <div class="col-md-9"><textarea id="c" class="form-control">
