--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ Output <span class="caret"></span>
 </div>
 		<hr>
 
-<center><button onclick="table.generate()" class="btn btn-default">Generate</button></center>
+<center><button onclick="table.generate()" style="margin:4px;" class="btn btn-default">Generate</button></center>
 <!-- Before-Generate -->
 <ins class="adsbygoogle"
      style="display:block"
@@ -267,7 +267,7 @@ Output <span class="caret"></span>
      data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script><----->
+</script><!----->
 
 <br>
 <div class="row">
