Fixed typo for new version

--- a/new.html
+++ b/new.html
@@ -247,7 +247,7 @@ Output <span class="caret"></span>
 <div class="btn-group" role="group">
 	<button onclick="table.generate()" class="btn btn-primary" data-toggle="tooltip" title="Generate code">Generate</button>
 	<div class="btn-group dropdown">
-        	<button data-toggle="tooltip" title="Output language" type="button" id="format-btn" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">LaTeX <span class="caret"></span></button>
+        	<button title="Output language" type="button" id="format-btn" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">LaTeX <span class="caret"></span></button>
         	<ul class="dropdown-menu" id="format-drop" style="max-height:200px;overflow-y:auto;">
 		  <li class="dropdown-header">TeX</li>
         	  <li data-value="latex"><a href="#">LaTeX</a></li>
