--- a/new.html
+++ b/new.html
@@ -608,8 +608,8 @@ Output <span class="caret"></span>
                         <p>To select multiple adjacent cells, uses <kbd>SHIFT + Click</kbd>. Click on the first cell, then hold <kbd>Shift</kbd> and click on the last cell.
                             <h4>Import LaTeX tables</h4>
                             <p>Under the logo, there's a <kbd>File</kbd> menu. Click on it and then follows <kbd>File</kbd> &gt; <kbd>Import table</kbd> &gt; <kbd>LaTeX</kbd>.
-                                <h4>Draw border</h4>
-                                <p>On the right panel, click on <kbd>Border editor</kbd> to expand the section. Then, click on <span class="glyphicon glyphicon-pencil"></span>.
+                                <h4>My table is too wide ! What can I do ?</h4>
+                                <p>You can fix the issue if you are generating LaTeX code. To do so, select the menu items <kbd>Output &gt; Settings</kbd>. Then, choose an option under <kbd>Fit table to page method</kbd></span>.
                                     <h4>More help</h4> If you have more questions, check the <a rel="help" href="help.html" target="_blank">FAQ</a>.
                 </div>
             </div>
